docs/_sass/jekyll-theme-minimal.scss
@import "fonts";
@import "rouge-github";

body {
  background-color:#fff;
  padding:50px;
  font:14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
  color:#727272;
  font-weight:400;
}

h1, h2, h3, h4, h5, h6 {
  color:#222;
  margin:0 0 20px;
}

p, ul, ol, table, pre, dl {
  margin:0 0 20px;
}

h1, h2, h3 {
  line-height:1.1;
}

h1 {
  font-size:28px;
}

h2 {
  color:#393939;
}

h3, h4, h5, h6 {
  color:#494949;
}

a {
  color:#F64B29;
  text-decoration:none;
  cursor:pointer;
}

a:hover, a:focus {
  color:#F64B29;
  font-weight:bold;
}

a small {
  font-size:11px;
  color:#777;
  margin-top:-0.3em;
  display:block;
}

a:hover small {
  color:#777;
}

.wrapper {
  width:860px;
  margin:0 auto;
}

blockquote {
  border-left:1px solid #e5e5e5;
  margin:0;
  padding:0 0 0 20px;
  font-style:italic;
}

code, pre {
  font-family:Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal, Consolas, Liberation Mono, DejaVu Sans Mono, Courier New, monospace;
  color:#333;
}

pre {
  padding:8px 15px;
  background:#f8f8f8;
  border-radius:5px;
  border:1px solid #e5e5e5;
  overflow-x:auto;
}

table {
  width:100%;
  border-collapse:collapse;
}

th, td {
  text-align:left;
  padding:5px 10px;
  border-bottom:1px solid #e5e5e5;
}

dt {
  color:#444;
  font-weight:700;
}

th {
  color:#444;
}

img {
  max-width:100%;
}

kbd {
  background-color:#fafbfc;
  border:1px solid #c6cbd1;
  border-bottom-color:#959da5;
  border-radius:3px;
  box-shadow:inset 0 -1px 0 #959da5;
  color:#444d56;
  display:inline-block;
  font-size:11px;
  line-height:10px;
  padding:3px 5px;
  vertical-align:middle;
}

header {
  width:270px;
  float:left;
  position:fixed;
  -webkit-font-smoothing:subpixel-antialiased;
}

header ul, header p {
  margin:0 0 40px;
}

ul.downloads {
  list-style:none;
  height:40px;
  padding:0;
  background:#f4f4f4;
  border-radius:5px;
  border:1px solid #e0e0e0;
  width:270px;
}

.downloads li {
  width:33%;
  float:left;
  border-right:1px solid #e0e0e0;
  height:40px;
}

.downloads li:last-child {
  border-right:none;
}

.downloads li:first-child a {
  border-radius:5px 0 0 5px;
}

.downloads li:last-child a {
  border-radius:0 5px 5px 0;
}

.downloads a {
  line-height:1;
  font-size:11px;
  color:#F64B29;
  display:block;
  text-align:center;
  padding-top:3px;
  height:34px;
}

.downloads a:hover, .downloads a:focus {
  color:#F64B29;
  font-weight:bold;
}

.downloads ul a:active {
  background-color:#f0f0f0;
}

strong {
  color:#222;
  font-weight:700;
}

.downloads a strong {
  font-size:14px;
  display:block;
  color:#222;
}

.downloads-title, .support-title {
  margin:0 0 10px;
}

ul.support-list {
  list-style:none;
  padding:0;
  margin-left:10px;
}

.support-list li {
  height:24px;
  margin-bottom:8px;
}

.support-icon {
  display:inline-block;
  height:24px;
  margin-right:5px;
}

.support-link {
  display:inline-block;
  line-height:24px;
  vertical-align:top;
}

.support-link strong {
  color:#F64B29;
}

section {
  width:500px;
  float:right;
  padding-bottom:50px;
}

small {
  font-size:11px;
}

hr {
  border:0;
  background:#e5e5e5;
  height:1px;
  margin:0 0 20px;
}

footer {
  width:270px;
  float:left;
  position:fixed;
  bottom:50px;
  -webkit-font-smoothing:subpixel-antialiased;
}

.hidden {
  display:none;
}

.video-wrap {
  width:100%;
  max-width:700px;
  margin:0 0 20px;
}

.video-container {
  position:relative;
  overflow:hidden;
  height:0;
  padding-bottom:56.25%;
}

.video-container iframe, .video-container embed {
  position:absolute;
  top:0;
  left:0;
  width:100%;
  height:100%;
  max-width:100%;
  border:0;
}

@media print, screen and (min-width: 721px) and (max-width: 960px) {

  header .description {
    margin:0 0 55px;
  }

  header ul:last-child {
    margin-bottom:25px;
  }

}

@media print, screen and (max-width: 960px) {

  div.wrapper {
    width:auto;
    margin:0;
  }

  header, section, footer {
    float:none;
    position:static;
    width:auto;
  }

  header {
    padding-right:320px;
  }

  section {
    border:1px solid #e5e5e5;
    border-width:1px 0;
    padding:20px 0;
    margin:0 0 20px;
  }

  header a small {
    display:inline;
  }

  header .downloads-title {
    position:absolute;
    right:155px;
    top:55px;
  }

  header .downloads-title.with-version {
    right:103px;
  }

  header .downloads {
    position:absolute;
    right:50px;
    top:86px;
  }

  header .support-title {
    position:absolute;
    right:185px;
    top:168px;
  }

  header .support-list {
    position:absolute;
    right:60px;
    top:199px;
  }

}

@media print, screen and (max-width: 720px) {
  body {
    word-wrap:break-word;
  }

  header {
    padding:0;
  }

  header ul, header .downloads-title, header .downloads, header .support-title, header .support-list, header p.view {
    position:static;
  }

  pre, code {
    word-wrap:normal;
  }
}

@media print, screen and (max-width: 480px) {
  body {
    padding:15px;
  }

  header .downloads {
    width:99%;
  }

}

@media print {
  body {
    padding:0.4in;
    font-size:12pt;
    color:#444;
  }
}

